tests/baselines/reference/sourceMapValidationImport.errors.txt
sourceMapValidationImport.ts(1,15): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== sourceMapValidationImport.ts (1 errors) ====
    export module m {
                  ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export class c {
        }
    }
    import a = m.c;
    export import b = m.c;
    var x = new a();
    var y = new b();